<resources>
    <string name="app_name">OrderFoodAppsCH3</string>
    <string name="text_search">Maybe you need something sweet?</string>
    <string name="greetings">Welcome back</string>
    <string name="username">Nisa !</string>
    <string name="tv_location_menu_detail_1">Location</string>
    <string name="tv_info_location_menu_detail_1">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="tagline_bg">Healthy\nFood \nFor Today</string>
    <string name="pick_for_you">Pick For You</string>
    <string name="img_ic_chart">Image Icon Chart</string>
    <string name="img_ic_search">Image Icon Search</string>
    <string name="img_ic_profile">Image Icon Profile</string>
    <string name="img_ic_nearby">Image Icon Nearby</string>
    <string name="img_ic_rice_noodle">Image Icon Rice Noodle</string>
    <string name="img_ic_fast_food">Image Icon Fast Food</string>
    <string name="img_ic_drink">Image Icon Drink</string>
    <string name="banner_image">Banner Image</string>
    <string name="count_item">1</string>
    <string name="add_btn">Add</string>
    <string name="rp">Rp</string>
    <string name="add_cart">Add To Cart + </string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">Cart</string>
    <string name="title_tab_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_password">**********</string>
    <string name="tv_nisaha_username">nisaha</string>
    <string name="tv_email">hamidatunnisa@gmail.com</string>
    <string name="tv_no_telp">0899789547987</string>
    <string name="app_settings">App Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notes">Notes:</string>
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="title_email">Email</string>
    <string name="title_no_telp">No. Telepon</string>
    <string name="title_total_order">Total Order</string>
    <string name="cart">Cart</string>
    <string name="quantity_total">x%s</string>
    <string name="empty_cart">No foods in cart</string>
    <string name="title_checkout">Checkout</string>
    <string name="total_price">Total Price</string>
    <string name="checkout">Checkout</string>
    <string name="title_delivery_method">Delivery Method</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="order_food_summary">Order Food Summary</string>
    <string name="title_total_item_price">Total Item Price</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="text_higlight_login">Already have an account? Sign In</string>
    <string name="text_highlight_register">Don\'t have an account? Register Here</string>
    <string name="login">LOGIN</string>
    <string name="hungryfine">HUNGRYFINE</string>
    <string name="login_background">login background</string>
    <string name="your_order_has_been_successfully">Your order has been successfully</string>
    <string name="you_have_just_back_home_click_on_the_button_below_to_go_to_home">You have just back home, \nclick on the button below to go to home</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_profile">CHANGE PROFILE</string>
    <string name="change_password">Change Password</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_error_name_cannot_same">Name cannot be same</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_error_password_cannot_same">Password cannot be same</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="back_to_home">BACK TO HOME</string>
    <string name="profile">Profile</string>
    <string name="pizza_hut">Pizza Hut</string>
    <string name="shrimps_squid_rings_clams">Shrimps, squid rings, clams and mushroom on a bed of Pesto sauce, topped with Mozzarella cheese and basil</string>
    <string name="_18_000">18.000</string>
    <string name="pizza_paperoni">Pizza Paperoni</string>
    <string name="_22_000">22.000</string>
    <string name="fill_your_notes">Fill your notes</string>
    <string name="_26_000">26.000</string>
    <string name="nearby">Nearby</string>
    <string name="yang_enak_yaa">Yang enak yaa</string>
    <string name="total_item_price">Total Item Price</string>
    <string name="rp_20_000">Rp 20.000</string>
    <string name="chart">Chart</string>
    <string name="rp_28_000">Rp 28.000</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">Register Failed: %1$s</string>
    <string name="change_password_request_send_to_your_email">Change password request send to your email</string>
    <string name="okay">Okay</string>
    <string name="do_you_want_to_logout">Do you want to logout ?</string>
    <string name="no">No</string>
    <string name="nisa">Nisa!</string>
    <string name="your_food_has_added_to_cart">Your food has added to cart</string>
    <string name="your_food_failed_to_add_to_cart">Your food failed to add to cart</string>
    <string name="login_failed">Login Failed: %1$s</string>
    <string name="checkout_failed">Checkout Failed :(</string>
</resources>