<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_method_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_delivery_method"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/title_delivery_method" />

                <RadioGroup
                    android:id="@+id/rg_delivery_method"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:checkedButton="@+id/rb_delivery"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_pick_up"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_toogle_bg"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/pick_up"
                        android:textColor="@drawable/selector_toogle_color_txt" />

                    <RadioButton
                        android:id="@+id/rb_delivery"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_toogle_bg"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/delivery"
                        android:textColor="@drawable/selector_toogle_color_txt" />
                </RadioGroup>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/cv_method_delivery"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/item_food_cart" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_payment_method"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/title_payment_method" />

                <RadioGroup
                    android:id="@+id/rg_payment_method"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/orange"
                    android:checkedButton="@+id/rb_e_wallet"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_cash"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_toogle_bg"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/cash"
                        android:textColor="@drawable/selector_toogle_color_txt" />

                    <RadioButton
                        android:id="@+id/rb_e_wallet"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_toogle_bg"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/e_wallet"
                        android:textColor="@drawable/selector_toogle_color_txt" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_shopping_summary"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_shopping_summary"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/order_food_summary" />

                <LinearLayout
                    android:id="@+id/ll_summary_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_item_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        android:text="@string/title_total_item_price" />

                    <TextView
                        android:id="@+id/tv_item_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textStyle="bold"
                        android:textColor="@color/orange"
                        tools:text="@string/rp_20_000" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>