<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/tv_header_profile"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Profile"
            app:layout_constraintBottom_toTopOf="@id/line_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_pencil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/line_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/line_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/img_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_profile" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/cl_content_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_profile_square"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/img_profile_square"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_username"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:text="@string/title_username"
                android:textColor="@color/greyLight"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_username"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nisaha_username"
                    android:textColor="@color/orange"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_password"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:text="@string/title_password"
                android:textColor="@color/greyLight"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_password"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_password"
                    android:textColor="@color/orange"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_email"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:text="@string/title_email"
                android:textColor="@color/greyLight"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_email"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_email"
                    android:textColor="@color/orange"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_no_telp"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:text="@string/title_no_telp"
                android:textColor="@color/greyLight"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_no_telp"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_no_telp"
                    android:textColor="@color/orange"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>



    </ScrollView>

</FrameLayout>