<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginHorizontal="25dp"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_your_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16sp"
                tools:text="@string/your_name" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="2dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16sp"
                tools:text="@string/email" />

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_logout"
            style="@style/parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/red" />

    </LinearLayout>
</androidx.cardview.widget.CardView>